Agrega imagen 'placeholder'

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <button>Sign up</button>
             </div>
             <div>
-                <img src="#" alt="this is a placeholder for an image">
+                <img src="./images/Placeholder.png" alt="this is a placeholder for an image">
             </div>
         </div>
     </body>
