--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                 <li><a href="#">header link three</a></li>
             </ul>
         </nav>
-        <div>
-            <div>
+        <div class="hero-container">
+            <div class="hero-left">
                 <h1>This website is awesome</h1>
                 <p>
                     This website has some subtext that goes under the
@@ -27,7 +27,7 @@
                 </p>
                 <button>Sign up</button>
             </div>
-            <div>
+            <div class="hero-right">
                 <img src="./images/Placeholder.png" alt="this is a placeholder for an image">
             </div>
         </div>
