--- a/index.html
+++ b/index.html
@@ -31,5 +31,26 @@
                 <img src="./images/Placeholder.png" alt="this is a placeholder for an image">
             </div>
         </div>
+        <div>
+            <h1>Some random information.</h1>
+            <div>
+                <div>
+                    <div class="illustation-container"></div>
+                    <p>this is some subtextunder an illustration or image</p>
+                </div>
+                <div>
+                    <div class="illustation-container"></div>
+                    <p>this is some subtextunder an illustration or image</p>
+                </div>
+                <div>
+                    <div class="illustation-container"></div>
+                    <p>this is some subtextunder an illustration or image</p>
+                </div>
+                <div>
+                    <div class="illustation-container"></div>
+                    <p>this is some subtextunder an illustration or image</p>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
