--- a/index.html
+++ b/index.html
@@ -31,23 +31,23 @@
                 <img src="./images/Placeholder.png" alt="this is a placeholder for an image">
             </div>
         </div>
-        <div>
+        <div class="info-container">
             <h1>Some random information.</h1>
-            <div>
-                <div>
-                    <div class="illustation-container"></div>
+            <div class="item-container">
+                <div class="item">
+                    <div class="item-img"></div>
                     <p>this is some subtext under an illustration or image</p>
                 </div>
-                <div>
-                    <div class="illustation-container"></div>
+                <div class="item">
+                    <div class="item-img"></div>
                     <p>this is some subtext under an illustration or image</p>
                 </div>
-                <div>
-                    <div class="illustation-container"></div>
+                <div class="item">
+                    <div class="item-img"></div>
                     <p>this is some subtext under an illustration or image</p>
                 </div>
-                <div>
-                    <div class="illustation-container"></div>
+                <div class="item">
+                    <div class="item-img"></div>
                     <p>this is some subtext under an illustration or image</p>
                 </div>
             </div>
