--- a/index.html
+++ b/index.html
@@ -60,5 +60,16 @@
             </p>
             <p class="author">-Thor, God of Thunder</p>
         </div>
+        <div class="cta-container">
+            <div class="cta">
+                <div class="cta-left">
+                    <h1>Call to action! It's time!</h1>
+                    <p>Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <div class="cta-right">
+                    <button>Sign up</button>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
